# Fully_Homomorphic_Encryption

./: Cargo.toml  README.md  main.rs
benches/: aes_bench.rs
src/: lib.rs
src/circuit/: mod.rs  parser.rs
src/cli/: commands.rs  mod.rs
src/fhe_aes/: blocks.rs  key.rs  mod.rs
src/gate/: mand.rs  mod.rs
src/utils/: constants.rs  mod.rs
tests/: aes_ctr.rs
